<resources>
    <string name="app_name">توربو تاکسی</string>

    <string name="log_in">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="notification">اطلاعیه ها</string>
    <string name="shifts">شیفت ها</string>
    <string name="replacement">جا به جایی</string>
    <string name="get_request">دریافتی</string>
    <string name="send_request">ارسالی</string>
    <string name="request">درخواست ها</string>
    <string name="text_of_contract">متن قرارداد</string>
    <string name="assignment_of_contract">امضا قرارداد</string>
    <string name="message">پیام ها</string>
    <string name="ok_notify">متوجه شدم</string>
    <string name="date">تاریخ : </string>
    <string name="shift">شیفت : </string>
    <string name="operator">اپراتور : </string>
    <string name="hint_date">تاریخ</string>
    <string name="hint_shift">شیفت</string>
    <string name="hint_operator">اپراتور</string>
    <string name="point"> : </string>
    <string name="submit">ارسال</string>
    <string name="confirm">تایید</string>
    <string name="register">ثبت</string>
    <string name="txt_please_for_exit_reenter_back">برای خروج دوباره کلید بازگشت را بزنید</string>
    <string name="reject">رد</string>
    <string name="callNotification">بازگشت به صفحه تماس</string>
    <string name="callNotificationButton">بازگشت به صفحه تماس</string>

    <string name="cancelTrip">لغو سفر</string>
    <string name="errorRegistration">ثبت خطا</string>
    <string name="driverComplaintRegistration">ثبت شکایت از راننده</string>
    <string name="passengerComplaintRegistration">ثبت شکایت از مسافر</string>
    <string name="lost">ثبت اشیا گمشده</string>
    <string name="lockDriver">قفل راننده</string>
    <string name="disposal">در اختیار</string>
    <string name="reFollow">پیگیری مجدد</string>
    <string name="reSendService">ارسال مجدد سرویس</string>
    <string name="rewardForTrip">انعام</string>
    <string name="Toman">تومان</string>


    <string name="unKnow">نامشخص</string>
    <string name="taxi">تاکسی</string>
    <string name="privilege">ممتاز</string>
    <string name="economically">اقتصادی</string>
    <string name="formality">تشریفات</string>

    <string name="best">بهترین ها</string>
    <string name="mistake">خطاهای من</string>
    <string name="reward">جوایز</string>
    <string name="scoreList">جدول امتیازات</string>
    <string name="scores">امتیازات</string>
    <string name="support">پشتیبانی</string>
    <string name="driver_support">پشتیبانی راننده</string>
    <string name="tripDetails">جزییات سفر</string>
    <string name="complaint">شکایات</string>

    <string name="hour">ساعت</string>
    <string name="score">امتیاز</string>
    <string name="expireDate">تاریخ انقضا : </string>

    <string name="today">امروز</string>
    <string name="month">ماه</string>

    <bool name="allow_ringing_while_early_media">false</bool>
    <bool name="isTablet">false</bool>

    <string name="exit">"تا اتمام تماس ورودی جاری، منتظر بمانید و مجدد تلاش کنید."</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sendTime">ساعت ارسال</string>
    <string name="customerName">نام مشتری</string>
    <string name="customerTell">تلفن </string>
    <string name="customerMobile"> همراه</string>
    <string name="customerAddress">آدرس</string>
    <string name="origin">مبدا</string>
    <string name="originAddress">آدرس مبدا</string>
    <string name="dest">مقصد</string>
    <string name="destAddress">آدرس مقصد</string>
    <string name="carType">نوع خودرو</string>
    <string name="driverMob">همراه راننده</string>
    <string name="time">ساعت</string>
    <string name="tripType">نوع سفر</string>
    <string name="city">شهر</string>
    <string name="percent">تخفیف</string>
    <string name="maxPercent">سقف تخفیف</string>
    <string name="sendDate">تاریخ اعزام</string>
    <string name="sendTime2">ساعت اعزام</string>
    <string name="driverCode">کد راننده</string>
    <string name="driverName">نام راننده</string>
    <string name="price">مبلغ</string>
    <string name="endTime">ساعت پایان</string>
    <string name="plaque">پلاک خودرو</string>
    <string name="sendCall">ساعت تماس</string>
    <string name="callTime">ساعت تماس</string>
    <string name="call">تماس</string>
    <string name="name">نام</string>
    <string name="stationCode">کد ایستگاه</string>
    <string name="station">ایستگاه</string>
    <string name="originStation">ایستگاه مبدا</string>
    <string name="destStation">ایستگاه مقصد</string>
    <string name="taxiCode">کد تاکسی</string>
    <string name="driverLocation">موقعیت راننده</string>
    <string name="Yesterday">دیروز</string>
    <string name="twoDaysAgo">دوروز قبل</string>
    <string name="serviceComment">توضیحات سرویس</string>
    <string name="trafficPlane">طرح ترافیک</string>
    <string name="search">جست و جو</string>
    <string name="fixedComment">توضیحات دائمی</string>
    <string name="callDate">تاریخ تماس</string>
    <string name="close">بستن</string>
    <string name="charge">شارژ شما</string>
    <string name="trip_register">ثبت سفر</string>
    <string name="determination">تعیین محدوده</string>
    <string name="trip">سفر</string>
    <string name="wrong">اشتباه</string>
    <string name="day">روز</string>
    <string name="enter">ورود</string>
    <string name="mobile">شماره همراه</string>
    <string name="accountInfo">اطلاعات حساب</string>
    <string name="archiveAddress">بایگانی آدرس</string>
    <string name="editAddress">ویرایش آدرس</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="father_name">نام پدر</string>
    <string name="national_code">کد ملی</string>
    <string name="birth_certificate_no">شماره شناسنامه</string>
    <string name="gender">جنسیت</string>
    <string name="start_date">تاریخ شروع کار</string>
    <string name="car_class">کلاس خودرو</string>
    <string name="IBEN_no">شماره شبا</string>
    <string name="VIN_no">شماره vin خودرو</string>
    <string name="smart_taxi_meter">تاکسی متر هوشمند</string>
    <string name="fuel_quota">سهمیه سوخت</string>
    <string name="confirm_info">تایید اطلاعات</string>
    <string name="stationName">نام ایستگاه</string>
    <string name="logout">خروج از حساب</string>
    <string name="setting">تنظیمات</string>
    <string name="driverInfo">اطلاعات راننده</string>
    <string name="destStationOperator">اپراتور ایستگاه مقصد</string>
    <string name="originStationOperator">اپراتور ایستگاه مبدا</string>
    <string name="timeArriveToPassenger">زمان رسیدن به مسافر</string>

</resources>
