<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_blue_border_edge"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtSendTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sendTime"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/customerName"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCustomerTell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/customerTell"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCustomerMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/customerMobile"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCustomerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/customerAddress"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCarType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/carType"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDriverMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/driverMob"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

</LinearLayout>