<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLighter"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".fragment.TripDetailsFragment">

    <RelativeLayout
        android:id="@+id/rlActionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#792ca9"
        android:layoutDirection="ltr">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tripDetails"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_header" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="اعزام نشده"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCustomerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/customerName"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hint_date"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTripType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tripType"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/city"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCustomerAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/customerAddress"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCustomerTell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/customerTell"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCustomerMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/customerMobile"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMaxPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/maxPercent"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlack"/>

                <TextView
                    android:id="@+id/txtSendDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sendDate"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSendTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDriverCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/driverCode"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDriverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/driverName"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDriverMob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/driverMob"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCarType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/carType"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/endTime"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPlaque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/plaque"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCancelTrip"
                android:text="@string/cancelTrip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnDriverLocation"
                android:text="@string/driverLocation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnReFollow"
                android:text="@string/reFollow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnErrorRegistration"
                android:text="@string/errorRegistration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnComplaintRegistration"
                android:text="@string/complaintRegistration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnLost"
                android:text="@string/lost"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnDriverLock"
                android:text="@string/lockDriver"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>