<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLighter"
    android:clickable="true"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".fragment.ScoresFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@mipmap/header_down" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_back"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/llBest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.75"
            android:background="@drawable/bg_white_edge"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_best" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/best"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_header"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRewards"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.75"
            android:background="@drawable/bg_white_edge"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reward" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/reward"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_header"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llScoreList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.75"
            android:background="@drawable/bg_white_edge"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scorelist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/scoreList"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_header"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

    </LinearLayout>

</LinearLayout>